# waveshare-modbus

./: Cargo.toml  bacon.toml
examples/: test.rs
src/: analog_in.rs  analog_out.rs  common.rs  digital.rs  lib.rs
